# wasmles

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json  postbuild.js
.github/workflows/: publish.yml  test-and-build.yml
resources/: functions.d.ts  index.d.ts  package.json  types.d.ts
resources/browser/: index.d.ts
resources/node/: index.d.ts
src/: lib.rs  linear_equations.rs  matrix.rs
