[package]
name = "wasmles"
version = "1.0.0"
authors = ["Andrew Krippner <andrew@flowcircuits.com>"]
license = "MIT"
edition = "2018"
description = "WASM Linear Equation Solver"
repository = "https://www.github.com/flowcircuits/wasmles"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nalgebra = "0.32.2"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
itertools = "0.11.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
